--- a/static/css/home-sh-bak.css
+++ b/static/css/home-sh-bak.css
@@ -11,26 +11,13 @@ home
 .homeDiv .wow { 
     display: inline-block;
     width: 25rem;
-    margin: 5rem 1rem 10rem 1rem; 
+    margin: 1rem 1rem;
     height: 30rem;
     border-radius: 0%; 
     font: 30px/280px "Microsoft Yahei";
     vertical-align: top; 
     *display: inline; 
     zoom: 1;
-}
-@media(max-width: 780px){
-    .homeDiv .wow { 
-        display: inline-block;
-        width: 30rem;
-        margin: 5rem 1rem 10rem 1rem; 
-        height: 30rem;
-        border-radius: 0%; 
-        font: 30px/280px "Microsoft Yahei";
-        vertical-align: top; 
-        *display: inline; 
-        zoom: 1;
-    }
 }
 .homeDiv .row{
     font-size: 0; 
